// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component in training status matches the previous snapshot 1`] = `
<_Footer
  blocked={false}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  onSetDone={[Function]}
  onSetFailed={[Function]}
  training={true}
>
  <footer
    data-css-116hn21=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <FooterButton
          clickHandler={[Function]}
          data-test="failButton"
          disabled={false}
        >
          <button
            disabled={false}
            onClick={[Function]}
          >
            Failed
          </button>
        </FooterButton>
        <FooterButton
          clickHandler={[Function]}
          data-test="doneButton"
          disabled={false}
        >
          <button
            disabled={false}
            onClick={[Function]}
          >
            Done
          </button>
        </FooterButton>
      </div>
    </glamorous(div)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot blocked matches the previous snapshot 1`] = `
<_Footer
  blocked={true}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  onSetDone={[Function]}
  onSetFailed={[Function]}
  training={false}
>
  <footer
    data-css-116hn21=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <FooterButton
          clickHandler={[Function]}
          disabled={true}
        >
          <button
            disabled={true}
            onClick={[Function]}
          >
            Starting ...
          </button>
        </FooterButton>
      </div>
    </glamorous(div)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot not blocked matches the mounted snapshot 1`] = `
<_Footer
  blocked={false}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  onSetDone={[Function]}
  onSetFailed={[Function]}
  training={false}
>
  <footer
    data-css-116hn21=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <FooterButton
          clickHandler={[Function]}
          disabled={false}
        >
          <button
            disabled={false}
            onClick={[Function]}
          >
            Start Workout
          </button>
        </FooterButton>
      </div>
    </glamorous(div)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot not blocked matches the rendered snapshot 1`] = `
<footer
  data-css-116hn21=""
>
  <div
    class="css-1cqgl9p"
  >
    <button>
      Start Workout
    </button>
  </div>
</footer>
`;
